rsworkspace/crates/trogon-decider-guest-macros/tests/ui/bundle_mismatched_module.stderr
error: all export_decider! commands must declare the same module
  --> tests/ui/bundle_mismatched_module.rs:18:18
   |
18 |         module = "scheduler.other",
   |                  ^^^^^^^^^^^^^^^^^
